@startuml

title __Methods.TableInfo Package Diagram__\n


    namespace Methods {
      namespace tableInfo {
        class Methods.tableInfo.CCTableInfo.AMCInfoData {
            ~ amcInfoList : ArrayList<String>
            - amcInfoNumber : int
            - wardId : int
            + AMCInfoData()
            + getData()
            + getNumber()
            - getList()
        }
      }
    }

  


    namespace Methods {
      namespace tableInfo {
        class Methods.tableInfo.CCTableInfo.CCWardData {
            + getWardInfo()
        }
      }
    }

  

    namespace Methods {
      namespace tableInfo {
        class Methods.tableInfo.CCTableInfo.DischargeInfoData {
            ~ dischargeInfoList : ArrayList<String>
            - dischargeInfoNumber : int
            + DischargeInfoData()
            + getData()
            + getNumber()
            + getWardName()
            - getList()
        }
      }
    }

  

    namespace Methods {
      namespace tableInfo {
        class Methods.tableInfo.DischargeTableData {
            ~ incomingList : ArrayList<Patient>
            - dischargeNumber : int
            - wardId : int
            + DischargeTableData()
            + getData()
            + getNumber()
            + refresh()
            - getList()
        }
      }
    }

  


    namespace Methods {
      namespace tableInfo {
        class Methods.tableInfo.CCTableInfo.IncomingInfoData {
            ~ incomingInfoList : ArrayList<String>
            - incomingInfoNumber : int
            + IncomingInfoData()
            + getData()
            + getNumber()
            - getList()
        }
      }
    }

  


    namespace Methods {
      namespace tableInfo {
        class Methods.tableInfo.IncomingTableData {
            ~ incomingList : ArrayList<Patient>
            - incomingNumber : int
            - wardId : int
            - wardType : String
            + IncomingTableData()
            + getData()
            + getNumber()
            + refresh()
            - getList()
        }
      }
    }


    namespace Methods {
      namespace tableInfo {
        class Methods.tableInfo.CCTableInfo.LongStayInfoData {
            ~ lsInfoList : ArrayList<String>
            - lsInfoNumber : int
            + LongStayInfoData()
            + getData()
            + getNumber()
            - getList()
        }
      }
    }

  

    namespace Methods {
      namespace tableInfo {
        class Methods.tableInfo.OtherTableData {
            ~ otherList : ArrayList<Patient>
            - otherNumber : int
            - wardId : int
            + OtherTableData()
            + getData()
            + getNumber()
            + refresh()
            - getList()
        }
      }
    }

  

    namespace Methods {
      namespace tableInfo {
        class Methods.tableInfo.TotalTableData {
            ~ totalList : ArrayList<Patient>
            - totalNumber : int
            - wardId : int
            + TotalTableData()
            + getData()
            + getNumber()
            + refresh()
            - getList()
        }
      }
    }

  


    namespace Methods {
      namespace tableInfo {
        class Methods.tableInfo.CCTableInfo.TransInfoData {
            ~ transInfoList : ArrayList<String>
            - transInfoNumber : int
            + TransInfoData()
            + getData()
            + getNumber()
            + getWardName()
            - getList()
        }
      }
    }

    namespace Methods {
      namespace tableInfo {
        class Methods.tableInfo.TransTableData {
            ~ transList : ArrayList<Patient>
            - transNumber : int
            - wardId : int
            + TransTableData()
            + getData()
            + getNumber()
            + refresh()
            - getList()
        }
      }
    }

  


    namespace Methods {
      namespace tableInfo {
        interface Methods.tableInfo.dataForTable {
            {abstract} + getData()
            {abstract} + getNumber()
        }
      }
    }

  

  Methods.tableInfo.CCTableInfo.AMCInfoData .up.|> Methods.tableInfo.dataForTable
  Methods.tableInfo.CCTableInfo.AMCInfoData -up-|> Methods.tableInfo.CCTableInfo.CCWardData
  Methods.tableInfo.CCTableInfo.AMCInfoData o-- Client.Client
  Methods.tableInfo.CCTableInfo.CCWardData -up-|> Methods.dateFormat
  Methods.tableInfo.CCTableInfo.DischargeInfoData .up.|> Methods.tableInfo.dataForTable
  Methods.tableInfo.CCTableInfo.DischargeInfoData -up-|> Methods.dateFormat
  Methods.tableInfo.CCTableInfo.DischargeInfoData o-- Client.Client
  Methods.tableInfo.DischargeTableData .up.|> Methods.tableInfo.dataForTable
  Methods.tableInfo.DischargeTableData -up-|> Methods.dateFormat
  Methods.tableInfo.DischargeTableData o-- Client.Client
  Methods.tableInfo.CCTableInfo.IncomingInfoData .up.|> Methods.tableInfo.dataForTable
  Methods.tableInfo.CCTableInfo.IncomingInfoData -up-|> Methods.dateFormat
  Methods.tableInfo.CCTableInfo.IncomingInfoData o-- Client.Client
  Methods.tableInfo.IncomingTableData .up.|> Methods.tableInfo.dataForTable
  Methods.tableInfo.IncomingTableData -up-|> Methods.dateFormat
  Methods.tableInfo.IncomingTableData o-- Client.Client
  Methods.tableInfo.CCTableInfo.LongStayInfoData .up.|> Methods.tableInfo.dataForTable
  Methods.tableInfo.CCTableInfo.LongStayInfoData -up-|> Methods.tableInfo.CCTableInfo.CCWardData
  Methods.tableInfo.CCTableInfo.LongStayInfoData o-- Client.Client
  Methods.tableInfo.OtherTableData .up.|> Methods.tableInfo.dataForTable
  Methods.tableInfo.OtherTableData -up-|> Methods.dateFormat
  Methods.tableInfo.OtherTableData o-- Client.Client
  Methods.tableInfo.TotalTableData .up.|> Methods.tableInfo.dataForTable
  Methods.tableInfo.TotalTableData -up-|> Methods.dateFormat
  Methods.tableInfo.TotalTableData o-- Client.Client
  Methods.tableInfo.CCTableInfo.TransInfoData .up.|> Methods.tableInfo.dataForTable
  Methods.tableInfo.CCTableInfo.TransInfoData -up-|> Methods.dateFormat
  Methods.tableInfo.CCTableInfo.TransInfoData o-- Client.Client
  Methods.tableInfo.TransTableData .up.|> Methods.tableInfo.dataForTable
  Methods.tableInfo.TransTableData -up-|> Methods.dateFormat
  Methods.tableInfo.TransTableData o-- Client.Client


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
